objects/vlocity_cmt__VlocityPartyRecordTypeSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__LinkedRecordField__c</fullName>
        <label>Linked Record Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LinkedRecordObject__c</fullName>
        <label>Linked Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecordTypeName__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecordTypeNamespace__c</fullName>
        <label>Record Type Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Party Record Type Setting</label>
    <pluralLabel>Vlocity Party Record Type Settings</pluralLabel>
</CustomObject>